feat: Update pseudocode for easier & shorter syntax